# flutter-llama

./: .gitignore  ARCHITECTURE_FLOW.md  FUNCTION_CALLING_FIXES.md  FUNCTION_CALLING_GUIDE.md  FUNCTION_CALLING_SUMMARY.md  GPU_REBUILD_GUIDE.md  HOW_TO_SWITCH_CHAT.md  IMPLEMENTATION_SUMMARY.md  IOS_MEMORY_FIX.md  MTMD_LIBRARY_ISSUE.md  MULTIMODAL_SETUP.md  QUICK_START.md  TOOL_CALLING.md  VISION_MODELS.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
assets/: chat_templates.json
ios/: Podfile  embed_framework.sh
ios/Frameworks/: llama.podspec
ios/Frameworks/llama.xcframework/: Info.plist
ios/Frameworks/llama.xcframework.bkp/ios-arm64/llama.framework/: llama
ios/Frameworks/llama.xcframework/ios-arm64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
ios/Frameworks/llama.xcframework/ios-arm64/llama.framework/Modules/: module.modulemap
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: built_in_tools.dart  chat_template.dart  lcontroller.dart  llama_ffi.dart  llama_runner.dart  main.dart  tool_calling.dart
lib/examples/: auto_function_demo.dart  minimal_example.dart  quick_integration_guide.dart
lib/internal/: auto_function_executor.dart  function_calling.dart  huggingface.dart  llama_cpp_ffi.dart  llama_isolate.dart  llama_request.dart  llama_service.dart
lib/screens/: auto_function_chat_screen.dart  chat_launcher_screen.dart
lib/tools/: function_calling_troubleshooter.dart
